# stockpile

./: README.md  pyproject.toml
stockpile/: __main__.py  config.py  data.py  db.py  main.py  utils.py
tests/: test_cli.py  test_json.py  test_utils.py
