[tool.poetry]
name = "stockpile"
version = "0.1.0"
description = ""
authors = ["felbfreire <felbfreire@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
